--- a/index.html
+++ b/index.html
@@ -24,3 +24,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+<iframe src="https://discord.com/widget?id=1181082540820410498&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
